--- a/exercises/templates/home.html
+++ b/exercises/templates/home.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     <h1>Welcome to the home page!</h1>
+    <a href="{{ url_for('display_student', student_id=2) }}">Link to Yair</a>
 </body>
 </html>
